# Rasyer

./: CMakeLists.txt  README.md  vcpkg.json
src/rasterizer/: Camera.cpp  Camera.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Rasterizer.cpp  Rasterizer.hpp  Shader.cpp  Shader.hpp  Window.cpp  global.hpp  main.cpp
src/raytracer/: BVH.cpp  BVH.hpp  Bound.cpp  Bound.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Primitive.cpp  Primitive.hpp  Ray.cpp  Ray.hpp  Raytracer.cpp  Raytracer.hpp  Scene.cpp  Scene.hpp  global.hpp  main.cpp
